--- a/server-src/ArkProjects.Minecraft.AspShared/ArkProjects.Minecraft.AspShared.csproj
+++ b/server-src/ArkProjects.Minecraft.AspShared/ArkProjects.Minecraft.AspShared.csproj
@@ -13,6 +13,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.12" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.12" />
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Scrutor" Version="4.2.2" />
